istio-samples/13-http-delegate/ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: myistio-prod


---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: myistio-review
